--- a/public/index.html
+++ b/public/index.html
@@ -94,8 +94,8 @@
                     <div class="col-xl-7 col-md-6">
                         <div class="slider_text ">
                             <h3 class="wow fadeInDown" data-wow-duration="1s" data-wow-delay=".1s" >Manage your portfolio <br>
-                                with myperformer</h3>
-                            <p class="wow fadeInLeft" data-wow-duration="1s" data-wow-delay=".1s">Monitor your investments at one place!</p>
+                                with myperformers</h3>
+                            <p class="wow fadeInLeft" data-wow-duration="1s" data-wow-delay=".1s">Monitor all your investments at one place!</p>
 
                                     <div class="app_download wow fadeInDown" data-wow-duration="1s" data-wow-delay=".1s">
                                         <a href="#" >
@@ -125,8 +125,8 @@
             <div class="row">
                 <div class="col-xl-12">
                     <div class="section_title text-center  wow fadeInUp" data-wow-duration=".5s" data-wow-delay=".3s">
-                        <h3>Save your time to <br>
-                                manage your portfolio</h3>
+                        <h3>Save your time <br>
+                                managing your portfolio</h3>
                     </div>
                 </div>
             </div>
@@ -358,7 +358,7 @@
     <!--/ testmonial_area  -->
 
     <!-- prising_area  -->
-    <div class="prising_area">
+    <!--div class="prising_area">
         <div class="container">
             <div class="row">
                 <div class="col-xl-12">
@@ -424,7 +424,7 @@
                 </div>
             </div>
         </div>
-    </div>
+    </div-->
     <!--/ prising_area  -->
 
     <!-- productivity_area  -->
@@ -432,8 +432,8 @@
         <div class="container">
             <div class="row align-items-center">
                 <div class="col-xl-7 col-md-12 col-lg-6">
-                    <h3 class="wow fadeInDown" data-wow-duration="1s" data-wow-delay=".1s">Get start from now <br>
-                            and increase productivity</h3>
+                    <h3 class="wow fadeInDown" data-wow-duration="1s" data-wow-delay=".1s">Get started now <br>
+                            and manage your investments better</h3>
                 </div>
                 <div class="col-xl-5 col-md-12 col-lg-6">
                     <div class="app_download wow fadeInDown" data-wow-duration="1s" data-wow-delay=".1s">
