--- a/public/index.html
+++ b/public/index.html
@@ -4,12 +4,14 @@
 <head>
     <meta charset="utf-8">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
-    <title>Performers App</title>
+    <title>Performers App: Portfolio Management App</title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <!-- <link rel="manifest" href="site.webmanifest"> -->
     <!-- Place favicon.ico in the root directory -->
+    <link rel="shortcut icon" href="img/favicon.ico" type="image/x-icon">
+    <link rel="icon" href="img/favicon.ico" type="image/x-icon">
 
     <!-- CSS here -->
     <link rel="stylesheet" href="css/bootstrap.min.css">
@@ -38,14 +40,14 @@
             <div id="sticky-header" class="main-header-area">
                 <div class="container-fluid">
                     <div class="row align-items-center">
-                        <div class="col-xl-1 col-lg-2">
+                        <div class="col-2">
                             <div class="logo">
                                 <a href="index.html">
                                     <img src="img/logo.png" alt="">
                                 </a>
                             </div>
                         </div>
-                        <div>
+                        <div class="col-8">
                             <div class="main-menu">
                                 <nav>
                                     <ul id="navigation">
