--- a/public/index.html
+++ b/public/index.html
@@ -221,9 +221,7 @@
                                 <div class="features_info2">
                                     <h3>Features that give
                                         you real feel</h3>
-                                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit sed do eiusmod tempor incididunt
-                                        ut labore et dolore magna aliqua. Quis ipsum suspendisse ultrices gravida Risus com odo
-                                        viverra maecenas.</p>
+                                    <p>Our app is packed with incredible, powerful and simple to use features. You would love to make use of the app for your Portfolio Management needs</p>
                                     <div class="about_btn">
                                         <a class="boxed-btn4" href="#">Download Now</a>
                                     </div>
@@ -247,11 +245,11 @@
                                 <div class="features_info">
                                     <h3 class="wow fadeInUp" data-wow-duration=".5s" data-wow-delay=".3s" >Easy setup and <br>
                                             management</h3>
-                                    <p class="wow fadeInUp" data-wow-duration=".6s" data-wow-delay=".4s"  >Lorem ipsum dolor sit amet, consectetur adipiscing elit sed do eiusmod tempor incididunt.</p>
+                                    <p class="wow fadeInUp" data-wow-duration=".6s" data-wow-delay=".4s"  >One click seamless account setup process</p>
                                     <ul>
-                                        <li class="wow fadeInUp" data-wow-duration=".7s" data-wow-delay=".5s" > Apartments frequently or motionless. </li>
-                                        <li class="wow fadeInUp" data-wow-duration=".8s" data-wow-delay=".6s" > Duis aute irure dolor in reprehenderit in voluptate. </li>
-                                        <li class="wow fadeInUp" data-wow-duration=".9s" data-wow-delay=".7s" > Voluptatem quia voluptas sit aspernatur.</li>
+                                        <li class="wow fadeInUp" data-wow-duration=".7s" data-wow-delay=".5s" > Secured and trusted portfolio management</li>
+                                        <li class="wow fadeInUp" data-wow-duration=".8s" data-wow-delay=".6s" > Easy access to all portfolios</li>
+                                        <li class="wow fadeInUp" data-wow-duration=".9s" data-wow-delay=".7s" > Convenient trading </li>
                                     </ul>
             
                                     <div class="about_btn wow fadeInUp" data-wow-duration=".10s" data-wow-delay=".8s" >
