few sanity fixes

--- a/public/index.html
+++ b/public/index.html
@@ -56,8 +56,8 @@
 <!--                                        <li><a href="Pricing.html">Pricing</a></li>-->
                                         <li><a href="#">Terms <i class="ti-angle-down"></i></a>
                                             <ul class="submenu">
-                                                <li><a href="privacy_policy.html">Privacy Policy</a></li>
-                                                <li><a href="term_and_conditions.html">Terms and Conditions</a></li>
+                                                <li><a href="privacy.html">Privacy Policy</a></li>
+                                                <li><a href="terms.html">Terms and Conditions</a></li>
                                             </ul>
                                         </li>
 <!--                                        <li><a href="#">pages <i class="ti-angle-down"></i></a>-->
