--- a/public/terms.html
+++ b/public/terms.html
@@ -39,14 +39,14 @@
     <div id="sticky-header" class="main-header-area">
       <div class="container-fluid">
         <div class="row align-items-center">
-          <div class="col-xl-1 col-lg-2">
+          <div class="col-2">
             <div class="logo">
               <a href="index.html">
                 <img src="img/logo.png" alt="">
               </a>
             </div>
           </div>
-          <div>
+          <div class="col-8">
             <div class="main-menu">
               <nav>
                 <ul id="navigation">
@@ -55,8 +55,8 @@
                   <!--                                        <li><a href="Pricing.html">Pricing</a></li>-->
                   <li><a href="#">Terms <i class="ti-angle-down"></i></a>
                     <ul class="submenu">
-                      <li><a href="privacy_policy.html">Privacy Policy</a></li>
-                      <li><a href="term_and_conditions.html">Terms and Conditions</a></li>
+                      <li><a href="privacy.html">Privacy Policy</a></li>
+                      <li><a href="terms.html">Terms and Conditions</a></li>
                     </ul>
                   </li>
                   <!--                                        <li><a href="#">pages <i class="ti-angle-down"></i></a>-->
@@ -269,8 +269,8 @@
               Useful Links
             </h3>
             <ul>
-              <li><a href="privacy_policy.html">Privacy Policy</a></li>
-              <li><a href="term_and_conditions.html">Terms and Conditions</a></li>
+              <li><a href="privacy.html">Privacy Policy</a></li>
+              <li><a href="terms.html">Terms and Conditions</a></li>
               <li><a href="contact.html">Contact Us</a></li>
             </ul>
           </div>
