--- a/public/index.html
+++ b/public/index.html
@@ -508,8 +508,8 @@
                                     Useful Links
                             </h3>
                             <ul>
-                                <li><a href="privacy_policy.html">Privacy Policy</a></li>
-                                <li><a href="term_and_conditions.html">Terms and Conditions</a></li>
+                                <li><a href="privacy.html">Privacy Policy</a></li>
+                                <li><a href="terms.html">Terms and Conditions</a></li>
                                 <li><a href="contact.html">Contact Us</a></li>
                             </ul>
                         </div>
