--- a/public/index.html
+++ b/public/index.html
@@ -167,7 +167,7 @@
     <!--/ service_area  -->
 
     <!-- service_area_2  -->
-    <div class="service_area_2">
+    <!--div class="service_area_2">
         <div class="container">
             <div class="row align-items-center">
                 <div class="col-xl-4 col-lg-4 col-md-6 wow fadeInLeft" data-wow-duration=".4s" data-wow-delay=".5s">
@@ -187,28 +187,65 @@
                         <div class="single_service  wow fadeInUp" data-wow-duration=".5s" data-wow-delay=".3s">
                             <span>01</span>
                             <h3>Intelligent App with AI Algorithm</h3>
-                            <!--p>Create your account in just one click using SMS Verification</p-->
+                            <p>Create your account in just one click using SMS Verification</p>
                         </div>
                     </div>
                     <div class="col-lg-4 col-md-4">
                         <div class="single_service  wow fadeInUp" data-wow-duration=".6s" data-wow-delay=".4s">
                             <span>02</span>
                             <h3>Valuable free signals</h3>
-                            <!--p>Link your exchange accounts</p-->
+                            <p>Link your exchange accounts</p>
                         </div>
                     </div>
                     <div class="col-lg-4 col-md-4  wow fadeInUp" data-wow-duration=".7s" data-wow-delay=".5s">
                         <div class="single_service">
                             <span>03</span>
                             <h3>User friendly interface</h3>
-                            <!--p>Explore the buying and selling prices in just one click and start trading right away.</p-->
+                            <p>Explore the buying and selling prices in just one click and start trading right away.</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div-->
+    <!--/ service_area_2  -->
+
+    <div class="features_area ">
+        <div class="container">
+            <div class="features_main_wrap">
+                <div class="row  align-items-center">
+                    <div class="col-xl-5 col-lg-5 offset-xl-1 offset-lg-1 col-md-6">
+                        <div class="about_image wow fadeInLeft" data-wow-duration=".4s" data-wow-delay=".3s">
+                            <img src="img/ilstrator_img/mobile_screen.png" alt="">
+                        </div>
+                    </div>
+                    <div class="col-xl-6 col-lg-6 col-md-6">
+                        <div class="features_info">
+                            <h3 class="wow fadeInUp" data-wow-duration=".5s" data-wow-delay=".3s" >Why Myperformer App</h3>
+                            <!--p class="wow fadeInUp" data-wow-duration=".6s" data-wow-delay=".4s"  >One click seamless account setup process</p-->
+                            <ul>
+                                <li class="wow fadeInUp" data-wow-duration=".7s" data-wow-delay=".5s" > Intelligent App with AI Algorithm</li>
+                                <li class="wow fadeInUp" data-wow-duration=".8s" data-wow-delay=".6s" > Valuable free signals</li>
+                                <li class="wow fadeInUp" data-wow-duration=".9s" data-wow-delay=".7s" > User friendly interface</li>
+                            </ul>
+
+                            <div class="row">
+                                <div class="app_download wow fadeInDown" data-wow-duration="1s" data-wow-delay=".1s">
+                                    <a href="#" >
+                                            <img src="img/ilstrator/app.svg" alt="">
+                                    </a>
+                                    <a href="#">
+                                            <img src="img/ilstrator/play.svg" alt="">
+                                    </a>
+                                    
+                                </div>
+                            </div>
                         </div>
                     </div>
                 </div>
             </div>
         </div>
     </div>
-    <!--/ service_area_2  -->
 
 
     <!-- about  -->
@@ -235,20 +272,14 @@
             </div-->
             <div class="features_main_wrap">
                     <div class="row  align-items-center">
-                            <div class="col-xl-5 col-lg-5 offset-xl-1 offset-lg-1 col-md-6">
-                                <div class="about_image wow fadeInLeft" data-wow-duration=".4s" data-wow-delay=".3s">
-                                    <img src="img/ilstrator_img/phone.png" alt="">
-                                </div>
-                            </div>
                             <div class="col-xl-6 col-lg-6 col-md-6">
                                 <div class="features_info">
-                                    <h3 class="wow fadeInUp" data-wow-duration=".5s" data-wow-delay=".3s" >Easy setup and <br>
-                                            management</h3>
+                                    <h3 class="wow fadeInUp" data-wow-duration=".5s" data-wow-delay=".3s" >Be in the Crypto World in 3 Steps!</h3>
                                     <!--p class="wow fadeInUp" data-wow-duration=".6s" data-wow-delay=".4s"  >One click seamless account setup process</p-->
                                     <ul>
-                                        <li class="wow fadeInUp" data-wow-duration=".7s" data-wow-delay=".5s" > Secured and trusted strong crypto signal management</li>
-                                        <li class="wow fadeInUp" data-wow-duration=".8s" data-wow-delay=".6s" > Easy access to different exchanges</li>
-                                        <li class="wow fadeInUp" data-wow-duration=".9s" data-wow-delay=".7s" > Easy buying of signals, manual and automatic </li>
+                                        <li class="wow fadeInUp" data-wow-duration=".7s" data-wow-delay=".5s" > <br><strong>Sign Up for free</strong><br>Create your account in just one click using SMS verification</li>
+                                        <li class="wow fadeInUp" data-wow-duration=".8s" data-wow-delay=".6s" > <br><strong>Create your profile</strong><br>Link your exchange accounts</li>
+                                        <li class="wow fadeInUp" data-wow-duration=".9s" data-wow-delay=".7s" > <br><strong>Start Trading!</strong><br>Explore the buying and selling prices in just one click and start trading right away</li>
                                     </ul>
 
                                     <div class="row">
@@ -265,6 +296,11 @@
                                 </div>
 
                             </div>
+                            <div class="col-xl-5 col-lg-5 offset-xl-1 offset-lg-1 col-md-6">
+                                <div class="about_image wow fadeInLeft" data-wow-duration=".4s" data-wow-delay=".3s">
+                                    <img src="img/ilstrator_img/phone02.png" alt="">
+                                </div>
+                            </div>
 
                         </div>
             </div>
@@ -273,7 +309,7 @@
                 <div class="row  align-items-center">
                     <div class="col-xl-5 col-lg-5 offset-xl-1 offset-lg-1 col-md-6">
                         <div class="about_image wow fadeInLeft" data-wow-duration=".4s" data-wow-delay=".3s">
-                            <img src="img/ilstrator_img/phone.png" alt="">
+                            <img src="img/ilstrator_img/phone01.png" alt="">
                         </div>
                     </div>
                     <div class="col-xl-6 col-lg-6 col-md-6">
