--- a/public/terms.html
+++ b/public/terms.html
@@ -42,7 +42,7 @@
           <div class="col-2">
             <div class="logo">
               <a href="index.html">
-                <img src="img/logo.png" alt="">
+                <img class="header-logo"  src="img/logo.png" alt="">
               </a>
             </div>
           </div>
