Lipika - css changes

--- a/public/index.html
+++ b/public/index.html
@@ -98,8 +98,7 @@
                     <div class="slider_text ">
                         <h3 class="wow fadeInDown" data-wow-duration="1s" data-wow-delay=".1s">Manage your Crypto
                             Portfolio in a most easier, faster & effective way with myperformers app</h3>
-                        <p class="wow fadeInLeft" data-wow-duration="1s" data-wow-delay=".1s">Be a part of our
-                            movement</p>
+
                         <div class="col-xl-1 col-md-1">
                             <img src="img/qr-code-performers.png" alt="" style="padding-left:100px">
                         </div>
@@ -113,11 +112,12 @@
                             <a href="#">
                                 <img src="img/ilstrator/play.svg" alt="">
                             </a>
-
                         </div>
-
+                        <div class="wow fadeInLeft sub-header" data-wow-duration="1s" data-wow-delay=".1s">Be a part of our
+                            movement</div>
                     </div>
                 </div>
+
                 <div class="col-xl-5 col-md-6">
                     <div class="phone_thumb wow fadeInDown" data-wow-duration="1.1s" data-wow-delay=".2s">
                         <img src="img/ilstrator/phone.png" alt="">
