Lipika - css changes

--- a/public/index.html
+++ b/public/index.html
@@ -538,13 +538,12 @@
     <div class="container">
         <div class="row align-items-center">
             <div class="col-xl-7 col-md-12 col-lg-6">
-                <h3 class="wow fadeInDown" data-wow-duration="1s" data-wow-delay=".1s">Get started now and manage your
-                    investment in a more effective way with us!</h3>
+                <p class="wow fadeInDown sub-header" style="text-align:center" data-wow-duration="1s" data-wow-delay=".1s">Get started now and manage your
+                    investment in a more effective way with us!</p>
             </div>
             <div class="col-xl-5 col-md-12 col-lg-6">
-                <div class="app_download wow fadeInDown" data-wow-duration="1s" data-wow-delay=".1s">
-                    <a href="#">
-                        <img src="img/ilstrator/app.svg" alt="">
+                <div class="app_download wow fadeInDown" data-wow-duration="1s" data-wow-delay=".1s" >
+                    <a href="#"><img src="img/ilstrator/app.svg" alt="">
                     </a>
                     <a href="#">
                         <img src="img/ilstrator/play.svg" alt="">
