--- a/public/contact.html
+++ b/public/contact.html
@@ -34,59 +34,59 @@
         <![endif]-->
 
 
-    <!-- header-start -->
-    <header>
-        <div class="header-area ">
-            <div id="sticky-header" class="main-header-area">
-                <div class="container-fluid">
-                    <div class="row align-items-center">
-                        <div class="col-2">
-                            <div class="logo">
-                                <a href="index.html">
-                                    <img src="img/logo.png" alt="">
-                                </a>
-                            </div>
-                        </div>
-                        <div class="col-8">
-                            <div class="main-menu">
-                                <nav>
-                                    <ul id="navigation">
-                                        <li><a class="active" href="index.html">home</a></li>
-                                        <!--                                        <li><a href="features.html">Features</a></li>-->
-                                        <!--                                        <li><a href="Pricing.html">Pricing</a></li>-->
-                                        <li><a href="#">Terms <i class="ti-angle-down"></i></a>
-                                            <ul class="submenu">
-                                                <li><a href="privacy.html">Privacy Policy</a></li>
-                                                <li><a href="terms.html">Terms and Conditions</a></li>
-                                            </ul>
-                                        </li>
-                                        <!--                                        <li><a href="#">pages <i class="ti-angle-down"></i></a>-->
-                                        <!--                                            <ul class="submenu">-->
-                                        <!--                                                 <li><a href="elements.html">elements</a></li>-->
-                                        <!--                                            </ul>-->
-                                        <!--                                        </li>-->
-                                        <li><a href="contact.html">Contact</a></li>
-                                    </ul>
-                                </nav>
-                            </div>
-                        </div>
-                        <!--                        <div class="col-xl-1 col-lg-1 d-none d-lg-block">-->
-                        <!--                            <div class="Appointment">-->
-                        <!--                                <div class="book_btn d-none d-lg-block">-->
-                        <!--                                    <a  href="#">Download</a>-->
-                        <!--                                </div>-->
-                        <!--                            </div>-->
-                        <!--                        </div>-->
-                        <div class="col-12">
-                            <div class="mobile_menu d-block d-lg-none"></div>
+<!-- header-start -->
+<header>
+    <div class="header-area ">
+        <div id="sticky-header" class="main-header-area">
+            <div class="container-fluid">
+                <div class="row align-items-center">
+                    <div class="col-2">
+                        <div class="logo">
+                            <a href="index.html">
+                                <img class="header-logo" src="img/logo.png" alt="">
+                            </a>
                         </div>
                     </div>
-
+                    <div class="col-8">
+                        <div class="main-menu">
+                            <nav>
+                                <ul id="navigation">
+                                    <li><a class="active" href="index.html">home</a></li>
+                                    <!--                                        <li><a href="features.html">Features</a></li>-->
+                                    <!--                                        <li><a href="Pricing.html">Pricing</a></li>-->
+                                    <li><a href="#">Terms <i class="ti-angle-down"></i></a>
+                                        <ul class="submenu">
+                                            <li><a href="privacy.html">Privacy Policy</a></li>
+                                            <li><a href="terms.html">Terms and Conditions</a></li>
+                                        </ul>
+                                    </li>
+                                    <!--                                        <li><a href="#">pages <i class="ti-angle-down"></i></a>-->
+                                    <!--                                            <ul class="submenu">-->
+                                    <!--                                                 <li><a href="elements.html">elements</a></li>-->
+                                    <!--                                            </ul>-->
+                                    <!--                                        </li>-->
+                                    <li><a href="contact.html">Contact</a></li>
+                                </ul>
+                            </nav>
+                        </div>
+                    </div>
+                    <!--                        <div class="col-xl-1 col-lg-1 d-none d-lg-block">-->
+                    <!--                            <div class="Appointment">-->
+                    <!--                                <div class="book_btn d-none d-lg-block">-->
+                    <!--                                    <a  href="#">Download</a>-->
+                    <!--                                </div>-->
+                    <!--                            </div>-->
+                    <!--                        </div>-->
+                    <div class="col-12">
+                        <div class="mobile_menu d-block d-lg-none"></div>
+                    </div>
                 </div>
+
             </div>
         </div>
-    </header>
-    <!-- header-end -->
+    </div>
+</header>
+<!-- header-end -->
 
     <!-- bradcam_area  -->
     <div class="bradcam_area bradcam_bg_1">
