--- a/public/contact.html
+++ b/public/contact.html
@@ -29,9 +29,10 @@
 </head>
 
 <body>
-    <!--[if lte IE 9]>
-            <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="https://browsehappy.com/">upgrade your browser</a> to improve your experience and security.</p>
-        <![endif]-->
+<!--[if lte IE 9]>
+<p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="https://browsehappy.com/">upgrade
+    your browser</a> to improve your experience and security.</p>
+<![endif]-->
 
 
 <!-- header-start -->
@@ -88,19 +89,19 @@
 </header>
 <!-- header-end -->
 
-    <!-- bradcam_area  -->
-    <div class="bradcam_area bradcam_bg_1">
-        <div class="container">
-            <div class="row">
-                <div class="col-xl-12">
-                    <div class="bradcam_text">
-                        <h3>Contact Us</h3>
-                    </div>
+<!-- bradcam_area  -->
+<div class="bradcam_area bradcam_bg_1">
+    <div class="container">
+        <div class="row">
+            <div class="col-xl-12">
+                <div class="bradcam_text">
+                    <h3>Contact Us</h3>
                 </div>
             </div>
         </div>
     </div>
-    <!-- /bradcam_area  -->
+</div>
+<!-- /bradcam_area  -->
 
     <!-- ================ contact section start ================= -->
     <section class="contact-section">
@@ -152,11 +153,11 @@
                         <h2 class="contact-title">Get in Touch</h2>
                     </div>
                     <div class="col-lg-8">
-                        <form class="form-contact contact_form" action="https://9xworks.com/email/contact_process.php" method="post" id="contactForm" novalidate="novalidate">
+                        <form class="form-contact contact_form" action="" method="post" id="contactForm" novalidate="novalidate">
                             <div class="row">
                                 <div class="col-12">
                                     <div class="form-group">
-                                        <textarea class="form-control w-100" name="message" id="message" cols="30" rows="9" onfocus="this.placeholder = ''" onblur="this.placeholder = 'Enter Message'" placeholder=" Name"></textarea>
+                                        <textarea class="form-control w-100" name="message" id="message" cols="30" rows="9" onfocus="this.placeholder = ''" onblur="this.placeholder = 'Enter Message'" placeholder="Enter your message"></textarea>
                                     </div>
                                 </div>
                                 <div class="col-sm-6">
@@ -177,6 +178,9 @@
                             </div>
                             <div class="form-group mt-3">
                                 <button type="submit" class="button button-contactForm boxed-btn">Send</button>
+                            </div>
+                            <div id="successMessage" style="display:none;">
+                                Thank you! Your message has been sent to us. We will be getting back to you soon.
                             </div>
                         </form>
                     </div>
@@ -243,43 +247,43 @@
                             <!--                                </ul>-->
                             <!--                            </div>-->
 
-                        </div>
                     </div>
-                    <!--                    <div class="col-xl-2 offset-xl-1 col-md-6 col-lg-3">-->
-                    <!--                        <div class="footer_widget">-->
-                    <!--                            <h3 class="footer_title">-->
-                    <!--                                    Services-->
-                    <!--                            </h3>-->
-                    <!--                            <ul>-->
-                    <!--                                <li><a href="#">Team management</a></li>-->
-                    <!--                                <li><a href="#">Collaboration</a></li>-->
-                    <!--                                <li><a href="#">Todo</a></li>-->
-                    <!--                                <li><a href="#">Events</a></li>-->
-                    <!--                            </ul>-->
+                </div>
+                <!--                    <div class="col-xl-2 offset-xl-1 col-md-6 col-lg-3">-->
+                <!--                        <div class="footer_widget">-->
+                <!--                            <h3 class="footer_title">-->
+                <!--                                    Services-->
+                <!--                            </h3>-->
+                <!--                            <ul>-->
+                <!--                                <li><a href="#">Team management</a></li>-->
+                <!--                                <li><a href="#">Collaboration</a></li>-->
+                <!--                                <li><a href="#">Todo</a></li>-->
+                <!--                                <li><a href="#">Events</a></li>-->
+                <!--                            </ul>-->
 
-                    <!--                        </div>-->
-                    <!--                    </div>-->
-                    <div class="col-xl-2 col-md-6 col-lg-2">
-                        <div class="footer_widget">
-                            <h3 class="footer_title">
-                                Useful Links
-                            </h3>
-                            <ul>
-                                <li><a href="privacy.html">Privacy Policy</a></li>
-                                <li><a href="terms.html">Terms and Conditions</a></li>
-                                <li><a href="contact.html">Contact Us</a></li>
-                            </ul>
-                        </div>
+                <!--                        </div>-->
+                <!--                    </div>-->
+                <div class="col-xl-2 col-md-6 col-lg-2">
+                    <div class="footer_widget">
+                        <h3 class="footer_title">
+                            Useful Links
+                        </h3>
+                        <ul>
+                            <li><a href="privacy.html">Privacy Policy</a></li>
+                            <li><a href="terms.html">Terms and Conditions</a></li>
+                            <li><a href="contact.html">Contact Us</a></li>
+                        </ul>
                     </div>
-                    <div class="col-xl-3 col-md-6 col-lg-3">
-                        <div class="footer_widget">
-                            <h3 class="footer_title">
-                                Downloads
-                            </h3>
-                            <ul>
-                                <li>
-                                    <a href="#">
-                                        Download from Apple Store
+                </div>
+                <div class="col-xl-3 col-md-6 col-lg-3">
+                    <div class="footer_widget">
+                        <h3 class="footer_title">
+                            Downloads
+                        </h3>
+                        <ul>
+                            <li>
+                                <a href="#">
+                                    Download from Apple Store
 
                                     </a>
                                 </li>
@@ -352,7 +356,7 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> All r
              }
     
             });
-        </script>
-    </body>
-    
-    </html>
+</script>
+</body>
+
+</html>
