--- a/public/index.html
+++ b/public/index.html
@@ -113,8 +113,10 @@
                                 <img src="img/ilstrator/play.svg" alt="">
                             </a>
                         </div>
-                        <div class="wow fadeInLeft sub-header" data-wow-duration="1s" data-wow-delay=".1s">Be a part of our
-                            movement</div>
+                        <div class="wow fadeInLeft sub-header" data-wow-duration="1s" data-wow-delay=".1s">Be a part of
+                            our
+                            movement
+                        </div>
                     </div>
                 </div>
 
@@ -298,9 +300,9 @@
                             <li class="wow fadeInUp" data-wow-duration=".8s" data-wow-delay=".6s"><br><strong>Create
                                 your profile</strong><br>Link your exchange accounts
                             </li>
-                            <li class="wow fadeInUp" data-wow-duration=".9s" data-wow-delay=".7s"><br><strong>Start
-                                Trading!</strong><br>Explore the buying and selling prices in just one click and start
-                                trading right away
+                            <li class="wow fadeInUp" data-wow-duration=".9s" data-wow-delay=".7s">
+                                <br><strong>Start!</strong><br>Explore the buying and selling prices in just one click
+                                and start right away
                             </li>
                         </ul>
 
@@ -538,11 +540,12 @@
     <div class="container">
         <div class="row align-items-center">
             <div class="col-xl-7 col-md-12 col-lg-6">
-                <p class="wow fadeInDown sub-header" style="text-align:center" data-wow-duration="1s" data-wow-delay=".1s">Get started now and manage your
+                <p class="wow fadeInDown sub-header" style="text-align:center" data-wow-duration="1s"
+                   data-wow-delay=".1s">Get started now and manage your
                     investment in a more effective way with us!</p>
             </div>
             <div class="col-xl-5 col-md-12 col-lg-6">
-                <div class="app_download wow fadeInDown" data-wow-duration="1s" data-wow-delay=".1s" >
+                <div class="app_download wow fadeInDown" data-wow-duration="1s" data-wow-delay=".1s">
                     <a href="#"><img src="img/ilstrator/app.svg" alt="">
                     </a>
                     <a href="#">
